--- a/mini_project/appengine-miniproject-python/show_stream.html
+++ b/mini_project/appengine-miniproject-python/show_stream.html
@@ -51,8 +51,9 @@
     </div>
       {% for stream in stream %}
       <div class="row">
-          <b>{{ stream.name }}
-          <b>{{ stream.cover_image}}
+        <!--<b{{ stream.name }}</b>-->
+          <!--<b>{{ stream.cover_image}}-->
+          <img src=stream.cover_image  alt=stream.name style="width:304px;height:228px;">
       </div>
       {% endfor %}
 
