fix phone problem.

--- a/mini_project/appengine-miniproject-python/show_photo_in_stream.html
+++ b/mini_project/appengine-miniproject-python/show_photo_in_stream.html
@@ -5,6 +5,6 @@
     <title>Stream.name</title>
 </head>
 <body>
-<img src=photo.url alt=photo.name style="width:304px;height:228px;">
+    <img src="{{ photo.url }}" alt="{{ photo.name }}" style="width:304px;height:228px;">
 </body>
 </html>
