--- a/mini_project/appengine-miniproject-python/show_stream.html
+++ b/mini_project/appengine-miniproject-python/show_stream.html
@@ -53,7 +53,7 @@
       <div class="row">
         <!--<b{{ stream.name }}</b>-->
           <!--<b>{{ stream.cover_image}}-->
-          <img src=stream.cover_image  alt=stream.name style="width:304px;height:228px;">
+          <img src="{{ stream.cover_image }}" alt="{{ stream.name }}" style="width:304px;height:228px;">
       </div>
       {% endfor %}
 
