Added comment and upload date for photo

--- a/mini_project/appengine-miniproject-python/ViewStream.html
+++ b/mini_project/appengine-miniproject-python/ViewStream.html
@@ -43,7 +43,7 @@
                 <!-- Headings-->
                 <div >
 
-                    {% for img in images %}
+                    {% for img in photos %}
                     <div class="col-md-2">
                         <img src="{{img.url}}" />
                     </div>
