--- a/mini_project/appengine-miniproject-python/CreateStream.html
+++ b/mini_project/appengine-miniproject-python/CreateStream.html
@@ -63,7 +63,7 @@
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-6 control-label" for="txtEmailList">Picture Url</label>
+                <label class="col-md-6 control-label" for="txtEmailList">Invite Message(Optional)</label>
                 <div class="col-md-6">
                          <textarea name="pic_url" class="input" rows="10" cols="10" id="txtMsg"></textarea>
                 </div>
