--- a/mini_project/appengine-miniproject-python/ViewStream.html
+++ b/mini_project/appengine-miniproject-python/ViewStream.html
@@ -42,6 +42,7 @@
   <div class="container-fluid jumbotron">
                 <!-- Headings-->
                 <div >
+                    <!--<input type="text" visible="True" value="{{name}}" name="stream_name">-->
 
                     {% for img in photos %}
                     <div class="col-md-2">
@@ -75,7 +76,7 @@
     <!-- Begin Subscribe Section -->
 
         <form id="frmUpload" action="{{upload_url}}" method="post"  enctype="multipart/form-data" >
-
+        <input type="text" visible="False" value="{{ stream_name }}"  name= "stream_name">
         <div class="container-fluid jumbotron">
                 
              <P class="col-lg-11" >Add an Image:-</P>
@@ -83,14 +84,19 @@
             <div>
                 
                     <div class="col-md-3">
-                        <input type="text" id="txtName" placeholder="File Name"/>
+                        <input type="text" name="txtName" placeholder="File Name"/>
                     </div>
                     <div class="col-md-3">
-                         <input type="text" id="txtComments" placeholder="Comments" />
+                         <input type="text" name="txtComments" placeholder="Comments" />
                     </div>
+                <!--<div class="col-md-12">-->
+                    <!--<input type="submit" value="Submit"  name="submit" />-->
+                <!--</div>-->
                 <div class="col-md-3"> <input type="file" name="file"><br></div>div>
-                    <div class="col-md-3"><input type="submit" name="submit" value="Submit"></div>
-                </div>            
+
+
+                   <div class="col-md-3"><input type="submit" name="submit" value="Submit"></div>
+                </div>
         </div>                
 
             <div class="col-md-12">
