Add all_stream to view_stream link, and add view timestamp.

--- a/mini_project/appengine-miniproject-python/AllStreams.html
+++ b/mini_project/appengine-miniproject-python/AllStreams.html
@@ -45,7 +45,7 @@
                 <div >
                     {% for stream in stream %}
                           <div class="col-md-3">
-                             <a href="view_count?name={{ stream.name }}"> <img src="{{ stream.cover_image }}" alt="{{ stream.name }}" style="width:304px;height:228px;"></a>
+                             <a href="view_stream?name={{ stream.name }}"> <img src="{{ stream.cover_image }}" alt="{{ stream.name }}" style="width:304px;height:228px;"></a>
                           </div>
                     {% endfor %}
                 </div>
