--- a/mini_project/appengine-miniproject-python/SearchStream.html
+++ b/mini_project/appengine-miniproject-python/SearchStream.html
@@ -30,11 +30,11 @@
 
     <div class="container-fluid jumbotron .col-md-offset-* " >
         <div class="main-links">
-            <a href="Management.html">Manage</a>
-            <a href="CreateStream.html" >Create</a>
-            <a href="AllStreams.html" >View</a>
-            <a href="#" >Search</a>
-            <a href="Trending.html">Trending</a>
+            <a href="management">Manage</a>
+            <a href="create_stream" >Create</a>
+            <a href="all_stream" >View</a>
+            <a href="searchstream" >Search</a>
+            <a href="trending">Trending</a>
              <a href="#">Social</a>
         </div>
     </div>
