--- a/mini_project/appengine-miniproject-python/management.html
+++ b/mini_project/appengine-miniproject-python/management.html
@@ -26,13 +26,15 @@
            </div>
     </header>
    <!-- End of Header area -->
-    <div class="container-fluid jumbotron .col-md-offset-*" >
-        <a href="/management">Manage</a>
-        <a href="/create_stream">Create</a>
-        <a href="#" >View</a>
-        <a href="#" >Search</a>
-        <a href="#">Trending</a>
-        <a href="#">Social</a>
+    <div class="container-fluid jumbotron .col-md-offset-* " >
+        <div class="main-links">
+            <a href="management">Manage</a>
+            <a href="create_stream" >Create</a>
+            <a href="all_stream" >View</a>
+            <a href="searchstream" >Search</a>
+            <a href="trending">Trending</a>
+             <a href="#">Social</a>
+        </div>
     </div>
     <form action="/management" method="post">
         <div class="container-fluid jumbotron">
