--- a/mini_project/appengine-miniproject-python/ViewStream.html
+++ b/mini_project/appengine-miniproject-python/ViewStream.html
@@ -45,9 +45,10 @@
                     <!--<input type="text" visible="True" value="{{name}}" name="stream_name">-->
 
                     {% for img in photos %}
-                    <div class="col-md-2">
-                        <img src="{{img.url}}" />
-                    </div>
+                        <div class="col-md-2">
+                            <img src="{{ photos.url }}"style="width:304px;height:228px;">
+                            <!--#<img src="{{photos.url}}" />-->
+                        </div>
                     {% endfor %}
                     <!--<div class="col-md-2">
 
