--- a/mini_project/appengine-miniproject-python/ViewStream.html
+++ b/mini_project/appengine-miniproject-python/ViewStream.html
@@ -65,9 +65,9 @@
 
                         &nbsp;
                     </div>
-                    <div class="col-md-2">
-                       <input type="button" id="btnMore" value="More Pictures"/>
-                    </div>
+                        <div class="col-md-2">
+                            <input type="submit" id="btnMore" value="More Pictures"/>
+                        </div>
                 </div>
 
     </div>
@@ -77,7 +77,7 @@
     <!-- Begin Subscribe Section -->
 
         <form id="frmUpload" action="{{upload_url}}" method="post"  enctype="multipart/form-data" >
-        <input type="text" visible="false" value="{{ stream_name }}"  name= "stream_name">
+        <input  type="hidden" value="{{ stream_name }}"  name= "stream_name">
         <div class="container-fluid jumbotron">
                 
              <P class="col-lg-11" >Add an Image:-</P>
@@ -100,12 +100,15 @@
                 </div>
         </div>                
 
+        </form>
             <div class="col-md-12">
-                <input type="button" value="Subscribe" id="btnSubscribe" />
+                <form id="frmUpload" action="/subscribe" method="post"  enctype="multipart/form-data" >
+                    <input  type="hidden" value="{{ stream_name }}"  name= "stream_name">
+                    <input type="submit" value="Subscribe" id="btnSubscribe" />
+                </form>
             </div>
 
 
-        </form>
 
 
       
