Link search page to view_stream.

--- a/mini_project/appengine-miniproject-python/SearchStream.html
+++ b/mini_project/appengine-miniproject-python/SearchStream.html
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-2">
                         <!--<img src="{{ stream.cover_image }}" alt="{{ stream.name }}"-->
-                        <a href="#"> <img src="{{ stream.cover_image }}" alt="{{ stream.name }}"/></a>
+                        <a href="view_stream?name={{ stream.name }}"> <img src="{{ stream.cover_image }}" alt="{{ stream.name }}"/></a>
                     </div>
                     <!--<div class="col-md-2">-->
                        <!--<a href="#"><img src="Images/image2.jpg" /></a>-->
