--- a/mini_project/appengine-miniproject-python/ViewStream.html
+++ b/mini_project/appengine-miniproject-python/ViewStream.html
@@ -1,4 +1,4 @@
-﻿﻿<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head >
     <title>Mini Project</title>
@@ -30,11 +30,11 @@
 
     <div class="container-fluid jumbotron .col-md-offset-* " >
         <div class="main-links">
-            <a href="Management.html">Manage</a>
-            <a href="CreateStream.html" >Create</a>
-            <a href="AllStreams.html" >View</a>
-            <a href="SearchStream.html" >Search</a>
-            <a href="Trending.html">Trending</a>
+            <a href="management">Manage</a>
+            <a href="create_stream" >Create</a>
+            <a href="all_stream" >View</a>
+            <a href="searchstream" >Search</a>
+            <a href="trending">Trending</a>
              <a href="#">Social</a>
         </div>
     </div>
@@ -42,17 +42,15 @@
   <div class="container-fluid jumbotron">
                 <!-- Headings-->
                 <div >
+                    <!--<input type="text" visible="True" value="{{name}}" name="stream_name">-->
 
-                <div >
-                    {% for photo in photos %}
-                          <div class="col-md-3">
-                              <img src="view_stream/image?img_id={{ photo.key.id() }}" alt="{{ photo.name }}" style="width:304px;height:228px;" />
-                          </div>
+                    {% for img in photos %}
+                        <div class="col-md-2">
+                            <img src="{{ img.url }}"style="width:304px;height:228px;">
+                            <!--#<img src="{{photos.url}}" />-->
+                        </div>
                     {% endfor %}
-                </div>
-
                     <!--<div class="col-md-2">
-
                        <img src="Images/image2.jpg" />
                     </div>
                     <div class="col-md-2">
@@ -61,7 +59,6 @@
                     <div class="col-md-2">
                         <img src="Images/image1.jpg" />
                     </div>
-
                     <div class="col-md-2"> -->
 
                         &nbsp;
@@ -77,9 +74,8 @@
 
     <!-- Begin Subscribe Section -->
 
-        <form id="frmUpload" action="{{ upload_url }}" method="post"  enctype="multipart/form-data" >
-        <input  type="hidden" value="{{ stream_name }}"  name= "stream_name">
-
+        <form id="frmUpload" action="{{upload_url}}" method="post"  enctype="multipart/form-data" >
+        <input type="hidden" visible="False" value="{{ stream_name }}"  name= "stream_name">
         <div class="container-fluid jumbotron">
                 
              <P class="col-lg-11" >Add an Image:-</P>
@@ -92,12 +88,17 @@
                     <div class="col-md-3">
                          <input type="text" name="txtComments" placeholder="Comments" />
                     </div>
-                <div class="col-md-3"> <input type="file" name="img"/></div>
-                    <div class="col-md-3"><input type="submit" name="submit" value="Submit"></div>
-                </div>
-                <input type="hidden" name="txtStream"  value="{{ stream_name }}" />
+                <!--<div class="col-md-12">-->
+                    <!--<input type="submit" value="Submit"  name="submit" />-->
+                <!--</div>-->
+                <div class="col-md-3"> <input type="file" name="file"><br></div>div>
+
+
+                   <div class="col-md-3"><input type="submit" name="submit" value="Submit"></div>
+        </div>
+             <input type="hidden" name="txtStream"  value="{{ stream_name }}" />
                 <input type="hidden" name="txtOffset"  value="{{ offset }}" />
-        </div>                
+        </div>
 
         </form>
             <div class="col-md-12">
@@ -108,9 +109,6 @@
             </div>
 
 
-
-
       
 </body>
 </html>
-
