added link to top of log in page, changed email, fixed issue caused by merge in showing pictures in stream

--- a/mini_project/appengine-miniproject-python/ViewStream.html
+++ b/mini_project/appengine-miniproject-python/ViewStream.html
@@ -44,10 +44,11 @@
                 <div >
 
                 <div >
-                    {% for photo in photos %}
-                          <div class="col-md-3">
-                              <img src="view_stream/image?img_id={{ photo.key.id() }}" alt="{{ photo.name }}" style="width:304px;height:228px;" />
-                          </div>
+                    {% for img in photos %}
+                        <div class="col-md-2">
+                            <img src="{{ img.url }}"style="width:304px;height:228px;">
+                            <!--#<img src="{{photos.url}}" />-->
+                        </div>
                     {% endfor %}
                 </div>
 
