--- a/mini_project/appengine-miniproject-python/Login.html
+++ b/mini_project/appengine-miniproject-python/Login.html
@@ -27,7 +27,16 @@
            </div>
     </header>
    <!-- End of Header area -->
-    
+  <div class="container-fluid jumbotron .col-md-offset-* " >
+        <div class="main-links">
+            <a href="management">Manage</a>
+            <a href="create_stream" >Create</a>
+            <a href="all_stream" >View</a>
+            <a href="searchstream" >Search</a>
+            <a href="trending">Trending</a>
+             <a href="#">Social</a>
+        </div>
+    </div>
       <table cellpadding="0px" cellspacing="0px" align="center">
         <tr>
             <td valign="top">
