--- a/mini_project/appengine-miniproject-python/Login.html
+++ b/mini_project/appengine-miniproject-python/Login.html
@@ -34,6 +34,8 @@
             <a href="all_stream" >View</a>
             <a href="searchstream" >Search</a>
             <a href="trending">Trending</a>
+            <a href="geo_view">GeoView</a>
+
              <a href="#">Social</a>
         </div>
     </div>
