--- a/mini_project/appengine-miniproject-python/ViewStream.html
+++ b/mini_project/appengine-miniproject-python/ViewStream.html
@@ -35,6 +35,8 @@
             <a href="all_stream" >View</a>
             <a href="searchstream" >Search</a>
             <a href="trending">Trending</a>
+            <a href="geo_view">GeoView</a>
+
              <a href="#">Social</a>
         </div>
     </div>
@@ -61,7 +63,6 @@
                     </div>
                     <div class="col-md-2"> -->
 
-                        &nbsp;
                     </div>
                     <div class="col-md-2">
                        <a href="view_stream?name={{ stream_name }}&offset={{ offset }}"><input type="button" id="btnMore" value="More Pictures"/></a>
